# adash

./: .gitignore  Dockerfile  README.md  dev.sh  pyproject.toml
.github/workflows/: pages.yml
dashboard/: __init__.py  build_static.py  github_source.py  server.py  zip_reader.py
dashboard/static/: app.js  index.html  style.css
